[package]
name = "decaf377-ka"
version = {workspace = true}
edition = {workspace = true}

[features]
default = ["std", "rand"]
std = ["ark-ff/std"]
rand = ["decaf377/rand", "rand_core/getrandom"]

[dependencies]
ark-ff = {workspace = true, default-features = false}
decaf377 = {workspace = true}
hex = {workspace = true}
rand_core = {workspace = true}
thiserror = {workspace = true}
zeroize = "1.4"
zeroize_derive = "1.3"

[dev-dependencies]
proptest = {workspace = true}
