[package]
name = "decaf377-ka"
authors = {workspace = true}
repository = {workspace = true}
description = "Key-agreement over Decaf377"
version = {workspace = true}
license = {workspace = true}
edition = {workspace = true}

[features]
default = ["std", "rand"]
std = ["ark-ff/std"]
rand = ["decaf377/rand", "rand_core/getrandom"]

[dependencies]
ark-ff = {workspace = true, default-features = false}
decaf377 = { git = "https://github.com/hu55a1n1/decaf377.git" }
hex = {workspace = true}
rand_core = {workspace = true}
thiserror = {workspace = true}
zeroize = "1.4"
zeroize_derive = "1.3"

[dev-dependencies]
proptest = {workspace = true}
